@@ -1,6 +1,7 @@
 Version 2.02.03 - 
 ===================================
-  Capture vgid in more places.
+  Whenever vgname is captured, also capture vgid.
+  Remove an incorrect unlock_vg() from process_each_lv().
   Update extent size information in vgchange and vgcreate man pages.
   Introduce origin_from_cow() and lv_is_visible().
   pvremove without -f now fails if there's no PV label.
